# yinebeb-dev-zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  ReadME.MD  skaffold.yaml  sqlx-data.json
.cargo/: config.toml
.github/: scheduled-audit.yaml
.github/workflows/: audit-on-push.yaml  general.yaml
configuration/: base.yaml  local.yaml  production.yaml
k8s/base/: core.yaml  kustomization.yaml  migrations.Dockerfile  migrations.yaml  namespace.yaml  postgres.yaml
kind/: config.sh  create-cluster.sh  kind-cluster.yaml
scripts/: init_db.sh  migrate_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
