[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Yinebeb atel <yinebeb@tribecap.co>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}

# Using table-like toml sytax to avoid a super ling line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
reqwest = "0.11"