[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Yinebeb atel <yinebeb@tribecap.co>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.11"
chrono = "0.4.15"
serde-aux = "3"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
# Telemetry
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
# Using table-like toml sytax to avoid a super ling line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"